cmake_minimum_required(VERSION 3.15)
project(arpiyi VERSION 0.2.0)
set(ARPIYI_EDITOR_VERSION ${arpiyi_VERSION})
set(ARPIYI_PLAYER_VERSION ${arpiyi_VERSION})

set(CMAKE_EXPORT_COMPILE_COMMANDS on)
add_subdirectory(lib)
add_subdirectory(codegen)
add_subdirectory(shared)
add_subdirectory(player)
add_subdirectory(editor)